# desplat

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh  transforms.json
desplat/: __init__.py  config.py  datamanager.py  desplat_model.py  field.py  pipeline.py
desplat/dataparsers/: onthego_dataparser.py  phototourism_dataparser.py  robustnerf_dataparser.py
scripts/: calculate_memory.py  convert.py  download_dataset.py  test_time_optimize.py
