[project]
name = "desplat"
description = "DeSplat: Decomposed Gaussian Splatting for Distractor-Free Rendering"
version = "0.0.1"

dependencies = [
    "nerfstudio >= 1.1.3",
    "gsplat == 1.0.0",
    "numpy == 1.24.4",
    "ruff",
    "pyyaml",
    "tyro==0.8.12"]

[tool.setuptools.packages.find]
include = ["desplat"]

[project.entry-points.'nerfstudio.method_configs']
test = 'desplat.config:desplat_method'

[project.entry-points.'nerfstudio.dataparser_configs']
onthego-data = 'desplat.dataparsers.onthego_dataparser:OnthegoDataParserSpecification'
robustnerf-data = 'desplat.dataparsers.robustnerf_dataparser:RobustNerfDataParserSpecification'
phototourism-data = 'desplat.dataparsers.phototourism_dataparser:PhotoTourismDataParserSpecification'
